--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">导航 - NAVI</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -107,7 +107,7 @@
               <p>问答系统、自动古诗生成</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <!-- <span class="text-primary">2019</span> -->
             </div>
           </div>
 
@@ -118,7 +118,7 @@
               <p>软件开发源码</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <!-- <span class="text-primary">2019</span> -->
             </div>
           </div>
 
