--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">安徽农业大学 &nbsp ANHUI AGRICULTURAL UNIVERSITY</h3>
-              <div class="subheading mb-3">物联网工程 &nbsp IOT</div>
+              <div class="subheading mb-3">物联网工程 &nbsp IOT Engineering</div>
               <div></div>
               <p>GPA: 3.6</p>
             </div>
