--- a/index.html
+++ b/index.html
@@ -124,12 +124,10 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">算法题解</h3>
-              <div class="subheading mb-3" herf = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <div class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</div>
+              <p>算法题解和思路</p>
             </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
+            
           </div>
           <!-- 
 
