--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">算法题解</h3>
-              <div class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</div>
+              <a class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</a>
               <p>算法题解和思路</p>
             </div>
             
