update e-mail address

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="text-primary">Haoyu Pan</span>
           </h2>
           <div class="subheading mb-5">安徽农业大学 / 安徽 · 合肥 / 
-            <a href="mailto:name@email.com">haoyu_pan@163.com</a>
+            <a href="haoyu_pan@163.com">haoyu_pan@163.com</a>
           </div>
           <p class="mb-5">安徽农业大学信息与计算机学院本科在读。我感兴趣的学习方向是深度学习、自然语言处理。我认为，自然语言交互是下一代人机交互的主要模式，也是实现人工智能的必经之路。<br>I am studying in the school of information and computer science, anhui agricultural university, majoring in deep learning and natural language processing.In my opinion, natural language interaction is the main mode of the next generation of human-computer interaction and the only way to realize artificial intelligence.</p>
           <ul class="list-inline list-social-icons mb-0">
