--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
               <a class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</a>
               <p>算法题解和思路</p>
             </div>
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">笔记</h3>
+              <a class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Notes - GitHub</a>
+              <p></p>
+            </div>
             
           </div>
           <!-- 
