--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
       <!-- <div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >网站建设</a></div> -->
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="repositories">
         <div class="my-auto">
           <h2 class="mb-5">Repositories</h2>
 
@@ -127,6 +127,7 @@
               <a class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Algorithm Solutions - GitHub</a>
               <p>算法题解和思路</p>
             </div>
+            
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">笔记</h3>
