--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Repositories</a>
+            <a class="nav-link js-scroll-trigger" href="#repositories">Repositories</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -128,11 +128,11 @@
               <p>算法题解和思路</p>
             </div>
             
-            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">笔记</h3>
               <a class="subheading mb-3" href = "https://github.com/Panverson/Algorithm">Notes - GitHub</a>
-              <p></p>
+              <p>测试</p>
             </div>
             
           </div>
