--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html>
 <head>
- 
-<metahttp-equiv="refresh"content="5;url=https://github.com/Panverson">
-   
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+    <meta http-equiv="refresh" content="5;url=https://github.com/Panverson">
 </head>
+<body>
+    
+</body>
+</html>>
