--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
           <h2 class="mb-0">潘浩宇
             <span class="text-primary">Haoyu Pan</span>
           </h2>
-          <div class="subheading mb-5">安徽农业大学 / 安徽 · 合肥 / 
+          <div class="subheading mb-5">北京邮电大学 / 中国 · 北京 / 
             <a href="haoyu_pan@163.com">haoyu_pan@163.com</a>
           </div>
-          <p class="mb-5">安徽农业大学信息与计算机学院本科在读。我感兴趣的学习方向是深度学习、自然语言处理。我认为，自然语言交互是下一代人机交互的主要模式，也是实现人工智能的必经之路。<br>I am studying in the school of information and computer science, anhui agricultural university, majoring in deep learning and natural language processing. In my opinion, natural language interaction is the main mode of the next generation of human-computer interaction and the only way to realize artificial intelligence.</p>
+
+          <p class="mb-5">北京邮电大学计算机学院硕士在读。我感兴趣的学习方向是深度学习、自然语言处理。我认为，自然语言交互是下一代人机交互的主要模式，也是实现人工智能的必经之路。<br>I am studying in the school of computer, Beijing University of Posts and Telecommunications, majoring in deep learning and natural language processing. In my opinion, natural language interaction is the main mode of the next generation of human-computer interaction and the only way to realize artificial intelligence.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="#">
@@ -99,6 +100,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="repositories">
         <div class="my-auto">
           <h2 class="mb-5">Repositories</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">深度学习相关</h3>
+              <a class="subheading mb-3" href="https://github.com/Panverson/LearnNLP">Nature Language Processing - GitHub</a>
+              <p>深度学习与机器学习</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <!-- <span class="text-primary">2021</span> -->
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -139,11 +151,18 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">北京邮电大学 &nbsp BEIJING UNIVERSITY OF POSTS AND TELECOMMUNICATIONS</h3>
+              <div class="subheading mb-3">软件工程 &nbsp Software Engineering</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">September 2020 - Now</span>
+            </div>
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">安徽农业大学 &nbsp ANHUI AGRICULTURAL UNIVERSITY</h3>
               <div class="subheading mb-3">物联网工程 &nbsp IOT Engineering</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2016 - Now</span>
+              <span class="text-primary">September 2016 - July 2020</span>
             </div>
           </div>
 
@@ -171,28 +190,6 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               “华为杯” 全国大学生物联网设计竞赛 华东赛区 一等奖 2019, 上海</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              LeetCode 全国高校编程大赛 前3.5%</li>
-            
-           <!--  <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
-               -->
           </ul>
         </div>
       </section>
