--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">深度学习相关</h3>
-              <a class="subheading mb-3" href="https://github.com/Panverson/LearnNLP">Nature Language Processing - GitHub</a>
+              <a class="subheading mb-3" href="https://github.com/Panverson/deepLearning">Deep Learning - GitHub</a>
               <p>深度学习与机器学习</p>
             </div>
             <div class="resume-date text-md-right">
